--- a/src/App.css
+++ b/src/App.css
@@ -149,6 +149,7 @@ button:disabled,
 .card-main{
   display: flex;
   justify-content: space-between;
+ 
 }
 .card-btn{
   font-weight: 800;
@@ -903,21 +904,64 @@ margin-top: 2px;
 }
 
 /* order detail  */
+.gif-div{
+    width:100%;
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+
+}
+.gif{
+  max-width: 600px;
+}
+.order-detail-menubar-heading{
+  font-size: 18px;
+  
+  font-weight: 600;
+  color: #686868;
+  margin-bottom: 20px;
+  margin: 6px;
+
+}
+.oderDeatial-heading{
+  margin-top: 27px;
+  margin-bottom: 0px;
+  text-align: center;
+  color: #3C3C3F;
+  font-size: 18px;
+  font-weight: 500;
+
+}
+.orderDetail-text{
+  margin-bottom: 27px;
+  padding: 0px 36px;
+  align-content: center;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16.39px;
+  text-align: center;
+  color: #6a6a6a;
+
+}
 
 .menu-bar{
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 5px 20px;
-  box-shadow: 0px 2px 5px rgb(164, 162, 162);
+  box-shadow: 0px 2px 5px rgb(209 201 201);
 }
 .card-border{
   padding: 18px 17px;
   border: 1px solid #E0E0E0;
   border-radius: 8px;
+  margin-bottom:12px ;
 }
 .detail-heading{
   margin-bottom:5px
+}
+.card-space{
+  margin-bottom: 15px;
 }
 
 
