--- a/src/App.css
+++ b/src/App.css
@@ -499,11 +499,12 @@ button:disabled {
 /* cart menubar */
 .main {
   width: 100%;
-  height: 73px;
-  background-color: #f9d9e0;
+  height: 100px;
+  background-color: white;
+
   padding: 0px 18px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   box-sizing: border-box;
 }
@@ -520,13 +521,20 @@ button:disabled {
   align-items: center;
   justify-content: space-between;
 }
+.cart-menubar-text {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+}
 
 .buy-btn {
   height: 36px;
   width: 120px;
   border-radius: 5px;
   color: white;
-  background-color: black;
+  background-color: #e72e80;
   border: none;
   font-size: 16px;
   font-weight: 500;
