--- a/src/App.css
+++ b/src/App.css
@@ -101,17 +101,16 @@ button:disabled {
   padding: 6px;
 }
 .box {
-  /* width: 342px; */
   height: auto;
-  color: #7d7d7d;
   border-radius: 6px;
-  font-size: 13px;
-  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px; */
-  padding: 11px;
-  margin: 10px 0px;
-  /* background-color: #F4F4F4; */
-  background-color: #f4f4f4;
+  margin-top: 12px;
+  color: #6b6b6b;
   margin-bottom: 25px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: left;
 }
 .delivery-type-text-div {
   display: flex;
@@ -219,14 +218,17 @@ button:disabled {
 }
 .plans {
   border: 0.5px solid black;
-  border-radius: 5px;
-  padding: 7px 0px;
-  width: 83px;
+  border-radius: 53px;
+  padding: 5px 0px;
+  width: 100px;
   box-sizing: border-box;
   /* height: 22px; */
+
+  font-size: 10px;
+  font-weight: 600;
+  line-height: 12px;
+  letter-spacing: 0.01em;
   text-align: center;
-  font-size: 11px;
-  font-weight: 400;
 }
 /* order review cards */
 .card-main {
@@ -498,10 +500,18 @@ button:disabled {
 
 /* cart menubar */
 .main {
+  /* background-color: #feeff6; */
+  background-image: linear-gradient(
+    #ffebf4,
+    rgb(255, 255, 255),
+    rgb(255, 255, 255),
+    rgb(255, 255, 255)
+  );
   width: 100%;
-  height: 100px;
-  background-color: white;
+  min-height: 100px;
 
+  /* box-shadow: 0px 0px 4px 0px rgb(130, 130, 130); */
+  padding-bottom: 14px !important;
   padding: 0px 18px;
   display: flex;
   justify-content: space-around;
@@ -545,11 +555,11 @@ button:disabled {
 /* Cart  */
 
 .brand-name {
-  font-size: 21px;
-  font-weight: 700;
-  line-height: 29px;
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 25px;
   letter-spacing: 0em;
-  margin-bottom: 8px;
+  margin: 17px 0px;
 }
 .total {
   font-size: 16px;
@@ -562,8 +572,18 @@ button:disabled {
   justify-content: space-between;
 }
 .quantity {
-  color: #878787;
+  color: #6b6b6b;
+  margin-top: 5px;
+
+  font-size: 14px !important;
+  font-weight: 500 !important;
+  line-height: 19px !important;
+  letter-spacing: 0em !important;
 }
+/* .quantity-div {
+  display: flex;
+  justify-content: space-between;
+} */
 .amount {
   font-size: 14px;
   font-weight: 500;
@@ -580,9 +600,9 @@ button:disabled {
   padding-bottom: 10px;
 }
 .text {
-  font-size: 13px;
-  font-weight: 400;
-  line-height: 18px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 19px;
   letter-spacing: 0em;
 }
 .button-div {
@@ -611,13 +631,38 @@ button:disabled {
 
   border: 0.5px solid #cecece;
 }
-.product {
-  padding-left: 7px;
+.promo-hr {
+  margin-bottom: 15px;
+  font-family: Manrope;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: left;
+
+  margin-top: 20px;
 }
+.newUser-hr {
+  width: 100%;
+  margin-bottom: 0px;
+
+  border: 1.5px solid #e9e9e9;
+}
+/* .product {
+  padding-left: 7px;
+} */
 .icon {
   height: 46px;
   position: relative;
   top: 4px;
+}
+.toBe-text {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: right;
+  color: #6b6b6b;
 }
 .cart-main {
   padding: 12px 20px 37px 20px;
@@ -986,6 +1031,7 @@ input {
 .newUser-main {
   box-sizing: border-box;
   padding: 0px 13px;
+  margin-bottom: 80px;
 }
 
 .newUser-textField {
@@ -994,7 +1040,7 @@ input {
 }
 .newUser-headings {
   margin-bottom: 16px;
-  margin-top: 33px;
+  margin-top: 25px;
   font-size: 18px;
   font-weight: 700;
   line-height: 19px;
@@ -1002,11 +1048,28 @@ input {
   text-align: left;
 }
 .manual-address {
-  font-size: 13px;
-  margin-bottom: 25px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 19px;
+  margin-bottom: 15px;
   margin-top: 14px;
   color: #e71583;
   text-decoration: underline;
+}
+.more-shipping-add {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 19px;
+  letter-spacing: 0.01em;
+  text-align: left;
+
+  margin-bottom: 15px;
+  margin-top: 5px;
+  color: #e71583;
+}
+.more-add-div {
+  margin-top: 8px !important;
+  margin-bottom: 20px;
 }
 .newUser-payment-method {
   margin-bottom: 12px;
@@ -1068,7 +1131,7 @@ input {
 }
 #info-img {
   position: relative;
-  top: 8px;
+  top: 6px;
   padding-right: 5px;
 }
 .info {
@@ -1077,8 +1140,13 @@ input {
   margin-top: 18px;
 }
 .info-text {
-  margin-bottom: 20px;
-  line-height: 10px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+
+  margin-bottom: 10px;
 }
 .info-img-2 {
   position: relative;
@@ -1271,8 +1339,8 @@ input {
 }
 /* opt screen */
 .Otp-Fields-New {
-  height: 60px !important;
-  width: 60px !important;
+  height: 35px !important;
+  width: 35px !important;
   border-radius: 10px;
   /* border-color: rgba(0, 0, 0, 0.1); */
   text-align: center;
@@ -1290,7 +1358,56 @@ input {
 
 @media (max-width: 426px) {
   .Otp-Fields-New {
-    height: 50px !important;
-    width: 50px !important;
+    height: 35px !important;
+    width: 35px !important;
   }
+}
+/* cart delete */
+.deleteCart-main {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.deleteCart-heading {
+  font-size: 18px;
+  font-weight: 800;
+  line-height: 25px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin: 5px;
+}
+
+.deleteCart-text {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin: 5px;
+}
+.deleteCart-button-div {
+  margin-top: 22px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  height: 118px;
+}
+.deleteCart-buttons {
+  border: none;
+  background-color: #e72e80;
+  color: white;
+  height: 50px;
+  border-radius: 6px;
+  width: 292px;
+  font-family: Manrope;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 23px;
+}
+
+.deleteCart-white {
+  background-color: white;
+  color: #e72e80;
+  border: 1px #e72e80 solid;
 }
