--- a/src/style.css
+++ b/src/style.css
@@ -45,6 +45,7 @@
 }
 .signIn-text {
   margin-bottom: 14px;
+  width: 286px;
 
   font-size: 12px;
   font-weight: 500;
@@ -82,12 +83,22 @@
   font-weight: 600;
   line-height: 23px;
 }
-.terms {
-  color: #e72e80;
-  text-decoration: underline;
-}
+
 .white {
   background-color: white;
   color: black;
   border: 1px black solid;
+}
+.terms {
+  color: #e72e80;
+  text-decoration: underline;
+}
+.pink-btn-signin {
+  font-family: Manrope;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 19px;
+  letter-spacing: 0.01em;
+  text-align: right;
+  color: #e72e80;
 }
